syntax = "proto3";

import "common.proto";

message Passenger {
  string booking = 1;
  string flight = 2;
  string airline = 3;
}

// Admin (Servicio de Administraci√≥n del Aeropuerto)

service AdminService {
  rpc AddSector(AddSectorRequest) returns (AddSectorResponse);
  rpc AddCounters(AddCountersRequest) returns (AddCountersResponse);
  rpc AddPassenger(Passenger) returns (AddPassengerResponse);
}

// --

message AddSectorRequest {
  string sector_name = 1;
}

message AddSectorResponse {}

// --

message AddCountersRequest {
  string sector_name = 1;
  int32 counter_count = 2;
}

message AddCountersResponse {
  CounterRange counter_range = 1;
}

// --

message AddPassengerRequest {
  Passenger passenger = 1;
}

message AddPassengerResponse {}
